--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@stomp/stompjs": "^7.2.1",
     "@stripe/react-stripe-js": "^3.1.0",
     "@stripe/stripe-js": "^5.5.0",
+    "@types/qrcode": "^1.5.6",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -52,6 +53,7 @@
     "lucide-react": "^0.454.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
+    "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
